Resolved bug sort

--- a/userland/testbin/Makefile
+++ b/userland/testbin/Makefile
@@ -11,7 +11,7 @@ SUBDIRS=add argtest badcall bigexec bigfile bigfork bigseek bloat conman \
 	malloctest matmult multiexec palin parallelvm poisondisk psort \
 	randcall redirect rmdirtest rmtest \
 	sbrktest schedpong sort sparsefile tail tictac triplehuge \
-	triplemat triplesort usemtest zero rdfaulter
+	triplemat triplesort usemtest zero rdfaulter prime
 
 # But not:
 #    userthreads    (no support in kernel API in base system)
