Clean code vm_tlb.c - removed duplicated

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.associations": {
-        "instrumentation.h": "c"
+        "instrumentation.h": "c",
+        "fcntl.h": "c"
     }
 }
